--- a/style.css
+++ b/style.css
@@ -33,26 +33,15 @@ h1, h2, h3{
   flex-direction: column;
   background-image: url(https://i0.wp.com/unfss.org/wp-content/uploads/2020/04/SMP-grocery-stores-banner.jpg?resize=1170%2C500&ssl=1);
   background-size: cover;
-  background-attachment: relative;
+  /* background-attachment: relative; */
+  background-attachment: fixed;
 }
 
 .header2{
   width: 100%;
   padding: 2vh;
   background-color: white;
-  /* background-attachment: fixed; */
-  background-blend-mode: luminosity;
   opacity:0.8;
-}
-
-.header1, .header3{
-  width: 100%;
-  padding: 2vh;
-  width: 100%;
-  background-color: white;
-  /* background-attachment: absolute; */
-  /*background-blend-mode: luminosity; */
-  opacity: 0.8;
 }
 
 .nav{
@@ -129,11 +118,6 @@ p{
   background-color: white;
 }
 
-.content1 a{
-  /* border-style: solid;
-  border-color: olive; */
-}
-
 .content1 img{  /*images in content1 are clickable*/
   max-width: 100%;
   border: solid;
@@ -159,8 +143,7 @@ p{
 }
 
 .content2 img{
-  /* width: 450px; */
-  height: auto;
+  /* height: auto; */
   max-width: 100%;
 }
 
@@ -169,8 +152,6 @@ p{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* padding: 50px;
-  margin: 50px; */
   padding: 5vw;
   margin: 2vw;
 
@@ -208,8 +189,6 @@ p{
   display: flex;
   align-content: center;
   align-items: center;
-  /* flex-grow:  */
-  /* justify-content: center; */
   gap: 1vh;
   padding: 5vh;
 }
@@ -217,10 +196,6 @@ p{
 .stat{
   max-width: 25%;
 }
-
-/* .stat h2{
-  color: darkolivegreen;
-} */
 
 .stat p{
   color: lightgray;
